feat: [CDS-37768]: v2.3.4 (#20)
* Documentation for argo-cd upgrades

* Merge pull request #12 from wings-software/conn-type

[CDS-33491]: Add ConectionType enum to clusters and repos

* Connection Type for repos and clusters

* feat: [CDS-37954]: Returning the entire RepoCreds object instead of only the URL (#14)

* remove repo.appDetails breaking line

* Merge pull request #2 from wings-software/GIT-265

Mask repository secrets instead of exposing them in order to tell the…

* Merge pull request #3 from wings-software/GIT-260

deprecate updateFields and use google.protobuf.FieldMask updateMask i…

* Merge pull request #8 from wings-software/GIT-436

Git 436

* Merge pull request #10 from wings-software/GIT-436

[GIT-436]: Fixed mask not being able to overwrite with zero-value

* clean up

* harness-gen

* update generate file

* fix imports

* lint fix

* update doc

* update versions

* include versions in maifest

* update manifests

* adjust proto num
